# idx-trading-system

./: .dockerignore  .env.example  .gitignore  README.md  Stock_list.txt  pyproject.toml  requirements.txt
agents/: __init__.py  coordinator.py
api/: __init__.py  cache.py  dependencies.py  main.py  mappers.py
backtest/: engine.py  metrics.py  monte_carlo_backtest.py  reports.py  simulator.py  walk_forward.py
config/: __init__.py  constants.py  logging_config.py  settings.py  trading_modes.py
core/: interfaces.py
dashboard/: __init__.py  app.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: IDX_Market_Swarm_Simulator_Implementation.md  IDX_Market_Swarm_Simulator_Spec.md  IMSS_Phase1_Pending_and_Phase2_Roadmap.md  IMSS_Update_LLM_Configuration.md  IMSS_Update_OpenViking_Integration.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
fundamental/: data_extractor.py  document_parser.py  fraud_detector.py  ratio_calculator.py  report_generator.py
imss/: __init__.py  config.py
llm/: __init__.py  base_client.py  claude_client.py  cost_tracker.py  glm_client.py  prompt_manager.py  response_validator.py  retry_handler.py
monitoring/: health_monitor.py  metrics_collector.py
notifications/: __init__.py  email_sender.py  telegram_bot.py
research/: calibration.py  drawdown_analysis.py  monte_carlo.py  return_distribution.py
scripts/: cleanup_sentiment.py  daily_scan.py  enrich_missing_metadata.py  entrypoint.sh  fetch_commodities.py  fetch_historical_data.py  generate_sample_data.py  healthcheck.sh  (+10 more)
(+214 files in other folders)
